--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1 {
 
 h2 {
     font-size: 60px;
-    
+    margin-bottom: 60px;
     font-weight: lighter;
     border-top: 1px solid #C4C4C4;
     border-bottom: 1px solid #C4C4C4;
@@ -25,7 +25,7 @@ h3 {
     
 }
 .container {
-    width: 570px;
+    
     margin: 0 auto;
     text-align: center;
     
@@ -97,6 +97,5 @@ img{
 p{
     margin-bottom: 10px;
     font-size: 14px;
-    margin-left: -400px;
-    margin-right: -400px;
+   
 }
